--- a/index.html
+++ b/index.html
@@ -14,6 +14,35 @@
     </head>
 
     <body>
+      <div class="navbar-fixed">
+        <nav class="teal">
+          <div class="container">
+            <div class="nav-wrapper">
+              <a href="#" class="brand-logo">TravelVille</a>
+              <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+               <ul class="right hide-on-med-and-down">
+                <li>
+                  <a href="#home">Home</a>
+                </li>
+                <li>
+                  <a href="#search">Search</a>
+                </li>
+                <li>
+                  <a href="#popular">Popular Places</a>
+                </li>
+                <li>
+                  <a href="#gallery">Gallery</a>
+                </li>
+                <li>
+                  <a href="#contact">Contact</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+      </div>
+
+
 
      <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
