--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <title>Travelville</title>
     </head>
 
-    <body>
+    <body id="home class="scrollspy">
       <div class="navbar-fixed">
         <nav class="teal">
           <div class="container">
@@ -89,7 +89,19 @@
     </ul>
   </section>
 
-
+  <!-- Section: Search -->
+  <section id="search" class="section section-search teal darken-1 white-text center scrollspy">
+    <div class="container">
+      <div class="row">
+        <div class="col s12">
+          <h3>Search Destinations</h3>
+          <div class="input-field">
+            <input class="white grey-text autocomplete" placeholder="Aruba, Cancun, etc..." type="text" id="autocomplete-input">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
      <!-- Compiled and minified JavaScript -->
     
