--- a/index.html
+++ b/index.html
@@ -215,6 +215,110 @@
     </div>
   </section>
 
+  <!-- Section: Gallery -->
+  <section id="gallery" class="section section-gallery scrollspy">
+    <div class="container">
+      <h4 class="center">
+        <span class="teal-text">Photo </span> Gallery
+      </h4>
+      <div class="row">
+        <div class="col s12 m3">
+          <img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900/?beach" alt="">
+        </div>
+        <div class="col s12 m3">
+          <img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900/?travel" alt="">
+        </div>
+        <div class="col s12 m3">
+          <img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900/?nature" alt="">
+        </div>
+        <div class="col s12 m3">
+          <img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900/?beach, travel" alt="">
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col s12 m3">
+          <img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900/?beaches" alt="">
+        </div>
+        <div class="col s12 m3">
+          <img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900/?traveling" alt="">
+        </div>
+        <div class="col s12 m3">
+          <img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900/?bridge" alt="">
+        </div>
+        <div class="col s12 m3">
+          <img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900/?boat, travel" alt="">
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col s12 m3">
+          <img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900/?water" alt="">
+        </div>
+        <div class="col s12 m3">
+          <img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900/?building" alt="">
+        </div>
+        <div class="col s12 m3">
+          <img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900/?trees" alt="">
+        </div>
+        <div class="col s12 m3">
+          <img class="materialboxed responsive-img" src="https://source.unsplash.com/1600x900/?cruise" alt="">
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Section: Contact -->
+  <section id="contact" class="section section-contact scrollspy">
+    <div class="container">
+      <div class="row">
+        <div class="col s12 m6">
+          <div class="card-panel teal white-text center">
+            <i class="material-icons medium">email</i>
+            <h5>Contact Us For Booking</h5>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus sed praesentium delectus. Sit, mollitia
+              quo. Veniam repellat voluptas ipsum doloremque?</p>
+          </div>
+          <ul class="collection with-header">
+            <li class="collection-header">
+              <h4>Location</h4>
+            </li>
+            <li class="collection-item">Travelville Agency</li>
+            <li class="collection-item">555 Beach rd, Suite 33</li>
+            <li class="collection-item">Miami FL, 55555</li>
+          </ul>
+        </div>
+        <div class="col s12 m6">
+          <div class="card-panel grey lighten-3">
+            <h5>Please fill out this form</h5>
+            <div class="input-field">
+              <input type="text" placeholder="Name" id="name">
+              <label for="name">Name</label>
+            </div>
+            <div class="input-field">
+              <input type="email" placeholder="Email" id="email">
+              <label for="email">Email</label>
+            </div>
+            <div class="input-field">
+              <input type="text" placeholder="Phone" id="phone">
+              <label for="phone">Phone</label>
+            </div>
+            <div class="input-field">
+              <textarea class="materialize-textarea" placeholder="Enter Message" id="message"></textarea>
+              <label for="message">Message</label>
+            </div>
+            <input type="submit" value="Submit" class="btn">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="section teal darken-2 white-text center">
+    <p class="flow-text">Travelville &copy; 2020</p>
+  </footer>
+
      <!-- Compiled and minified JavaScript -->
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
