--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
   <footer class="section teal darken-2 white-text center">
     <p class="flow-text">Travelville &copy; 2020</p>
   </footer>
-
+    <!-- TEST -->
      <!-- Compiled and minified JavaScript -->
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
